[x] User: Fixed visibility logic on group wall page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5559,7 +5559,7 @@ i.bs-pray{
 }
 
 .j-reader-actions i,
-.j-wall-item .item-header i{
+.j-wall-item .item-header i.verse-icon2{
     color: #fff !important;
 }
 
